# auditronAIcustom

./: .dockerignore  .env  LICENSE.md  README.md  __init__.py  alembic.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  events.py
api/: main.py
backend/: .coverage  .env  Dockerfile  alembic.ini  check_tables.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  config.py.backup  database.py  events.py  events.py.tmp  exceptions.py  init_db.py  monitoring.py
backend/app/cqrs/: analysis.py  base.py
backend/app/db/: base.py  events.py  session.py  unit_of_work.py
backend/app/events/: event_store.py
backend/app/factories/: repository_factory.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  analysis.py  base.py  metrics.py  settings.py  user.py
backend/app/repositories/: analysis_repository.py  base.py  user_repository.py
backend/app/schemas/: analysis.py  base.py  user.py
backend/app/services/: analysis_service.py  auth_service.py  base.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: __init__.py
backend/scripts/: db.py  init-db.sh
backend/tests/: test_analysis.py
backend/tests/integration/: test_analysis_flow.py
backend/tests/performance/: test_analysis_performance.py
backend/tests/security/: test_api_security.py  test_auth_security.py  test_xss_csrf.py
backend/tests/test_files/: sample.py
backend/tests/unit/: test_auth_service.py
(+291 files in other folders)
